objects/Child__c.object
<CustomObject>
    <label>Child</label>
    <nameField>
        <label>Child Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Childs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent</label>
        <referenceTo>Parent__c</referenceTo>
        <relationshipLabel>Childs</relationshipLabel>
        <relationshipName>Childs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Picklist1__c</fullName>
        <label>Picklist1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist2__c</fullName>
        <label>Picklist2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Picklist1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A- America</fullName>
                </value>
                <value>
                    <fullName>A- Austrial</fullName>
                </value>
                <value>
                    <fullName>B-Butan</fullName>
                </value>
                <value>
                    <fullName>B-Bangladesh</fullName>
                </value>
                <value>
                    <fullName>C- Canada</fullName>
                </value>
                <value>
                    <fullName>C- China</fullName>
                </value>
                <value>
                    <fullName>D- Dubai</fullName>
                </value>
                <value>
                    <fullName>D- Denmark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Amount__c</fullName>
        <label>Annual Amount</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Amount__c</fullName>
        <formula>Parent__r.Annual_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>Child</fullName>
        <active>true</active>
        <label>Child</label>
    </recordTypes>
    <validationRules>
        <fullName>A</fullName>
        <active>true</active>
        <errorConditionFormula>Annual_Amount__c &gt; 9000</errorConditionFormula>
        <errorMessage>Don&apos;t enter more than 9000</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EmailValidate</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT( ISBLANK( Email__c ) ) ,  NOT( REGEX( Email__c , &quot;[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,4}&quot; )))</errorConditionFormula>
        <errorMessage>Please enter correct Email</errorMessage>
    </validationRules>
</CustomObject>